@startuml
skinparam classAttributeIconSize 0

package "Modelo" {

    class HorarioAtencion {
        - dia: DayOfWeek
        - horaInicio: LocalTime
        - horaFin: LocalTime
        + HorarioAtencion(dia: DayOfWeek, horaInicio: LocalTime, horaFin: LocalTime)
    }

    class PuntoComercial {
        - id: int
        - nombre: String
        - ubicacion: String
        - abierto: boolean
        - cerradoPermanentemente: boolean
        - tipoComercio: ActividadEconomica
        - horario: List<HorarioAtencion>

        + PuntoComercial(id: int, nombre: String, ubicacion: String, horario: List<HorarioAtencion>, tipoComercio: ActividadEconomica)
        + verBalance(): String
        + isAbierto(): boolean
        + toString(): String
    }

    abstract class ActividadEconomica {
        - tipo: String
        - deficit: double
        - ingresosBrutos: double
        - ingresosNetos: double
        - recursosAVG: double
        - abierto: boolean
        - estaCerradoPermanentemente: boolean
        - recursos: List<Recurso>

        + ActividadEconomica(tipo: String)
        + calcularRentabilidad(): double
        + calcularGananciaNeta(): double
        + calcularEficiencia(): double
        + setRecursos(recursos: List<Recurso>): void
        + setAbierto(abierto: boolean): void
        + setCerradoPermanentemente(cerrado: boolean): void
        + getTipo(): String
        + getAbierto(): boolean
        + isCerradoPermanentemente(): boolean
        + toString(): String
    }

    class FeriaItinerante extends ActividadEconomica {
        - ubicacionesPasadas: List<String>
        - ubicacionesFuturas: List<String>
        - responsables: List<Responsable>
        - puestos: List<NegocioBase>

        + FeriaItinerante(tipo: String, responsables: List<Responsable>)
        + setPuestos(puestos: List<NegocioBase>, admin: Responsable): void
        + setPuesto(puesto: NegocioBase, admin: Responsable): void
        + getPuestos(): List<NegocioBase>
        + calcularRentabilidad(): double
        + calcularGananciaNeta(): double
        + calcularEficiencia(): double
        + toString(): String
    }

    class MercadoFijo extends ActividadEconomica {
        - numeroPuestos: int
        - costoEspacio: double
        - rotacionProductos: double
        - costoMantenimiento: Recurso
        - responsables: List<Responsable>
        - puestos: List<NegocioBase>

        + MercadoFijo(costoEspacio: double, rotacionProductos: double, numeroPuestos: int, responsables: List<Responsable>)
        + setPuestos(puestos: List<NegocioBase>, admin: Responsable): void
        + setPuesto(puesto: NegocioBase, admin: Responsable): void
        + getPuestos(): List<NegocioBase>
        + calcularRentabilidad(): double
        + calcularGananciaNeta(): double
        + calcularEficiencia(): double
        + toString(): String
    }

    class Recurso {
        - descripcion: String
        - costo: double

        + Recurso(descripcion: String, costo: double)
        + getCosto(): double
        + toString(): String
    }

    abstract class TiendaLocal extends ActividadEconomica {
        - owner: Responsable
        - vendedor: Vendedor
        - costoReabastecer: double
        - inventarioPermanente: List<Producto>
        - inventarioReabastecer: List<Producto>

        + TiendaLocal(inventarioPermanente: List<Producto>, owner: Responsable, vendedor: Vendedor)
        + calcularInventarioTotal(): double
        + mostrarInventario(): String
        + vender(vendedor: Vendedor, producto: Producto): void
    }

    class NegocioBase extends TiendaLocal {
        - numeroDePuesto: int

        + NegocioBase(inventarioPermanente: List<Producto>, owner: Responsable, vendedor: Vendedor)
        + getNumeroDePuesto(): int
        + setNumeroDePuesto(numero: int): void
        + toString(): String
    }

    class Producto extends Recurso {
        - id: int
        - nombre: String
        - pvp: double
        - stock: int

        + Producto(id: int, nombre: String, pvp: double, costo: double, stock: int)
        + getPVP(): double
        + vender(cantidad: int): void
        + toString(): String
    }

    abstract class Persona {
        - id: int
        - nombre: String

        + Persona(id: int, nombre: String)
        + toString(): String
    }

    abstract class Vendedor extends Persona {
        - ventas: List<Venta>

        + Vendedor(id: int, nombre: String)
        + registrarVenta(venta: Venta): void
        + toString(): String
    }

    class Responsable extends Vendedor {
        - cargo: String
        - responsabilidad: PuntoComercial
        - vendedoresACargo: List<Vendedor>

        + Responsable(id: int, nombre: String, cargo: String)
        + setResponsabilidad(punto: PuntoComercial): void
        + supervisar(): void
    }

    class Venta {
        - producto: Producto
        - vendedor: Vendedor
        - cantidad: int
        - fecha: Date

        + Venta(producto: Producto, vendedor: Vendedor, cantidad: int, fecha: Date)
        + calcularTotal(): double
        + toString(): String
    }

    ' Relaciones con cardinalidad y nombre
    PuntoComercial "1" o-- "1..*" HorarioAtencion : tiene >
    PuntoComercial "1" o-- "1" ActividadEconomica : desarrolla >
    ActividadEconomica "1" o-- "0..*" Recurso : usa >
    TiendaLocal "1" o-- "1..*" Producto : posee >
    TiendaLocal "1" o-- "1" Vendedor : atendido por >
    Venta "1" o-- "1" Producto : incluye >
    Venta "1" o-- "1" Vendedor : realizada por >
    FeriaItinerante "1" o-- "0..*" NegocioBase : contiene puestos >
    FeriaItinerante "1" o-- "1..*" Responsable : gestionada por >
    MercadoFijo "1" o-- "1..*" Responsable : administrada por >
    MercadoFijo "1" o-- "1..*" NegocioBase : contiene puestos >
    Responsable "1" o-- "0..*" Vendedor : supervisa >
}

package "Controladores" {

    class ComercioController {
        + registrarPuntoComercial(): void
        + simularActividad(): void
        + generarReporte(): void
    }

    class ProductoController {
        + registrarProducto(): void
        + actualizarStock(): void
    }

    class ArchivoController {
        + cargarDesdeCSV(path: String): void
    }

    class DBController {
        + guardarEnDB(): void
        + cargarDesdeDB(): void
    }

    ComercioController ..> PuntoComercial : administra >
    ComercioController ..> ActividadEconomica : simula >
    ProductoController ..> Producto : gestiona >
    ArchivoController ..> Producto : importa >
    DBController ..> PuntoComercial : persiste >
}

package "Vista" {

    class ConsolaUI {
        + mostrarMenu(): void
        + mostrarReporte(): void
    }

    ConsolaUI ..> ComercioController : invoca >
    ConsolaUI ..> ProductoController : administra >
    ConsolaUI ..> ArchivoController : carga CSV >
}

@enduml
